Updating the exisiting files and uploading new files - Completed up to the app Pixelgrade section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <section id="welcome">
             <section id="intro">
                 <section id="intro-left">
-                    <h1 id="intro-title">Lessons and insigths <span>from 8 years</span></h1>
+                    <h1 id="intro-title">Lessons and insights <span>from 8 years</span></h1>
                     <p id="intro-description">Where to grow your business as a photographer: site or a social media?</p>
-                    <button id="register-btn" class="button">Register</button>
+                    <button id="register-btn" class="button"><a href="#" class="register-btn">Register</a></button>
                 </section>
                 <section id="intro-right">
                     <img src="images/Illustrations/landing-page-illustration.svg" alt="Man-with-a-laptop-illustration-1" id="illustration-1">
@@ -54,6 +54,65 @@
         </section>
 
         <!--End of Registering Section-->
+        <!--Our CLients Section-->
+
+        <section id="clients">
+            <section id="client-info">
+                <h2 class="title">Our Clients</h2>
+                <p class="description">We have been working with some Fortune 500+ clients</p>
+            </section>
+            <section id="client-logos">
+                <img src="images/Logos/Logo (2).svg" alt="Client-Logos" class="clientlogo">
+                <img src="images/Logos/Logo (3).svg" alt="Client-Logos" class="clientlogo">
+                <img src="images/Logos/Logo (4).svg" alt="Client-Logos" class="clientlogo">
+                <img src="images/Logos/Logo (5).svg" alt="Client-Logos" class="clientlogo">
+                <img src="images/Logos/Logo (6).svg" alt="Client-Logos" class="clientlogo">
+                <img src="images/Logos/Logo (7).svg" alt="Client-Logos" class="clientlogo">
+                <img src="images/Logos/Logo (4).svg" alt="Client-Logos" class="clientlogo">
+            </section>
+        </section>
+        <section id="community">
+            <section id="community-info">
+                <h2 class="title">Manage your entire community in a single system</h2>
+                <p class="description">Who is Nextcent suitable for?</p>
+            </section>
+            <section id="community-cards">
+                <div class="community-cards">
+                    <div class="cardsec1">
+                    <img src="images/icons/group-icon.svg" alt="group-icon" id="group-icon">
+                    <h2 class="title">Membership Organizations</h2>
+                    </div>
+                    <p class="description">Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                <div class="community-cards">
+                    <div class="cardsec1">
+                    <img src="images/icons/building-icon.svg" alt="building-icon" id="building-icon">
+                    <h2 class="title">National Associations</h2>
+                    </div>
+                    <p class="description">Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                <div class="community-cards">
+                    <div class="cardsec1">
+                    <img src="images/icons/hands-icon.svg" alt="hands-icon" id="hands-icon">
+                    <h2 class="title">Clubs and Groups</h2>
+                    </div>
+                    <p class="description">Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+            </section>
+        </section>
+        <section id="app-section">
+            <section id="app-section-left">
+                <img src="images/Illustrations/app-illustration.svg" alt="app-illustration" id="app-illustration">
+            </section>
+            <section id="app-section-right">
+                <h2 class="title">The unseen of spending three years at Pixelgrade</h2>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                <button id="learn-more-btn" class="button"><a href="#" class="register-btn">Learn More</a></button>
+            </section>
+        </section>
+
+        <!--End of the Clients section-->
+
 
     </main>
 </body>     
