completed the site upto get a demo section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <img src="images/Logos/Logo (4).svg" alt="Client-Logos" class="clientlogo">
             </section>
         </section>
+
+        <!--End of Clients section-->
+        <!--Community Section-->
+
         <section id="community">
             <section id="community-info">
                 <h2 class="title">Manage your entire community in a single system</h2>
@@ -111,9 +115,108 @@
             </section>
         </section>
 
-        <!--End of the Clients section-->
+        <!--End of the Community section-->
+        <!--Local Business Section-->
 
+        <section id="local-business">
+            <section id="local-business-left">
+                <h2 class="title">Helping a local <span>business reinvent itself</span></h2>
+                <p class="description">We reached here with our hard work and dedication</p>
+            </section>
+            <section id="local-business-right">
+                <div class="right-top-business">
+                    <section class="grp">
+                        <img src="images/icons/Icon.png" alt="two-people" class="small-icons">
+                        <div id="count">
+                         <h3 class="count">2,245,341</h3>
+                        <p class="count-description">Members</p>
+                        </div>                   </section>
+                    <section class="grp">
+                        <img src="images/icons/Icon (1).png" alt="three-hands" class="small-icons">
+                        <div id="count">
+                         <h3 class="count">46,328</h3>
+                        <p class="count-description">Clubs</p>
+                        </div>                   </section>
+                </div>
+                <div class="right-bottom-business">
+                    <section class="grp" id="u-grp">
+                        <img src="images/icons/Icon (2).png" alt="pointer-click" class="small-icons">
+                        <div id="count">
+                         <h3 class="count">828,867</h3>
+                        <p class="count-description">Event Bookings</p>
+                            </div>
+                    </section>
+                    <section class="grp">
+                        <img src="images/icons/Icon (3).png" alt="credit-card" class="small-icons">
+                        <div id="count">
+                         <h3 class="count">1,926,436</h3>
+                        <p class="count-description">Payments</p>
+                        </div>                   
+                    </section>
+
+                </section>
+        </section>
+
+            <!--End of local business section-->
+            <!--How to Design Your Site Footer Section-->
+
+            <section id="app-section">
+                <section id="app-section-left">
+                    <img src="images/Illustrations/app-illustration.svg" alt="app-illustration" id="app-illustration">
+                </section>
+                <section id="app-section-right">
+                    <h2 class="title">How to design your site footer like we did</h2>
+                    <p class="description">Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
+                    <button id="learn-more-btn" class="button"><a href="#" class="register-btn">Learn More</a></button>
+                </section>
+            </section>
+
+            <!--End of How to design your footer section-->
+            <!--Customers Section-->
+
+            <section id="customer-section">
+                <div id="customer-left">
+                    <img src="images/tesla-image.svg" alt="tesla-image" id="tesla-image">
+                </div>
+                <div id="customer-right">
+                    <div id="customer-text-section">
+                        <p class="customer-description">Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
+                        <p class="name">Tim Smith</p>
+                        <p class="customer-description2">British Dragon Boat Racing Association</p>
+                    </div>
+                    <div id="customer-logo-section">
+                        <img src="images/Logos/coloured-logos/Logo (8).svg" alt="client-logos" class="clientlogos">
+                        <img src="images/Logos/coloured-logos/Logo (9).svg" alt="client-logos" class="clientlogos">
+                        <img src="images/Logos/coloured-logos/Logo (10).svg" alt="client-logos" class="clientlogos">
+                        <img src="images/Logos/coloured-logos/Logo (11).svg" alt="client-logos" class="clientlogos">
+                        <img src="images/Logos/coloured-logos/Logo (12).svg" alt="client-logos" class="clientlogos">
+                        <img src="images/Logos/coloured-logos/Logo (13).svg" alt="client-logos" class="clientlogos">
+
+                        <a href="#" id="customer-link">
+                            <p class="customer-link">Meet all customers </p> <img id="right-arrow" src="images/Illustrations/Right.svg" alt=""> 
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section id="marketing">
+                <div id="marketing-text">
+                    <div id="description-marketing">
+                        <h2 id="marketing-title">Caring is the new marketing</h2>
+                        <p id="marketing-description">The Nexcent blog is the bnest place to read about the latest membership insights trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!--End of Customers Section-->
+            <!--Demo Section-->
+
+            <section id="demo">
+                <h1 id="demo-title">Pellentesque suscipit fringilla libero eu.</h1>
+                <button id="demo-button" class="demo-btn"><a href="#" id="demo-link">Get a Demo </a></button>
+            </section>
 
     </main>
-</body>     
+</body> 
+<footer>
+</footer>    
 </html> 
