Completed Developing the site

--- a/index.html
+++ b/index.html
@@ -198,16 +198,92 @@
                     </div>
                 </div>
             </section>
-            <section id="marketing">
+
+            <!--End of Customers Section-->
+            <!--Marketing Section-->
+
+            <!--<section id="marketing">
                 <div id="marketing-text">
                     <div id="description-marketing">
                         <h2 id="marketing-title">Caring is the new marketing</h2>
-                        <p id="marketing-description">The Nexcent blog is the bnest place to read about the latest membership insights trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.</p>
+                        <p id="marketing-description">The Nexcent blog is the best place to read about the latest membership insights trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.</p>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
-            <!--End of Customers Section-->
+                <div class="community-updates">
+                    <div class="update-details">
+                        <p class="update-header">Caring is the new marketing</p>
+                        <p class="update-text">The Nexcent blog is the best place to read about the latest membership insights, trends and more. 
+                            See who's joining the community, read about how our community are increasing their membership income and lot's more.​</p>
+                    </div>
+                <div class="update-frame">
+                    <div class="frame-box">
+                        <img src="images/card-image1.png" alt="">
+                        <div class="box-content">
+                            <p class="box-content-text">
+                                Creating Streamlined Safeguarding Processes with OneRen
+                            </p>
+                            <div class="readmore-update">
+                                <p class="readmore-button">
+                                    Readmore
+                                </p>
+                                <img  class="readmore-arrow"  src="images/Illustrations/Right.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="frame-box">
+                        <img src="images/card-image2.png" alt="">
+                        <div class="box-content">
+                            <p class="box-content-text">
+                                What are your safeguarding responsibilities and how can you manage them?
+                            </p>
+                            <div class="readmore-update">
+                                <p class="readmore-button">Readmore</p>
+                                <img class="readmore-arrow" src="images/Illustrations/Right.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="frame-box">
+                        <img src="images/card-image3.png" alt="">
+                        <div class="box-content">
+                            <p class="box-content-text">
+                                Revamping the Membership Model with Triathlon Australia
+                            </p>
+                            <div class="readmore-update">
+                                <p class="readmore-button">Readmore</p>
+                                <img class="readmore-arrow" src="images/Illustrations/Right.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <!--<div id="cards-section">
+                    <div class="cards1">
+                        <img src="images/card-image1.png" alt="card-image1" class="card-image1">
+                        <div class="card-info">
+                            <p class="card-description">Creating Streamlined Safeguarding Processes with OneRen</p>
+                            <button class="readmore"><a href="#" class="readmore-link">Readmore<img src="images/Illustrations/Right.svg" alt="" class="right-arrow"></a></button>
+                        </div>
+                    </div>
+                    <div class="cards2">
+                        <img src="images/card-image2.png" alt="card-image2" class="card-image2">
+                        <div class="card-info">
+                        </div>
+                            <p class="card-description">What are your safeguarding responsibilities and how can you manage them?</p>
+                            <button class="readmore"><a href="#" class="readmore-link">Readmore<img src="images/Illustrations/Right.svg" alt="" class="right-arrow"></a></button>
+                        </div>
+                    </div>
+                    <div class="cards3">
+                        <img src="images/card-image3.png" alt="card-image3" class="card-image3">
+                        <div class="card-info">
+                            <p class="card-description">Revamping the Membership Model with Triathlon Australia</p>
+                            <button class="readmore"><a href="#" class="readmore-link">Readmore<img src="images/Illustrations/Right.svg" alt="" class="right-arrow"></a></button>
+                        </div>
+                    </div>
+                </div>>-->
+
+            <!--End of Marketing Section-->
             <!--Demo Section-->
 
             <section id="demo">
@@ -215,8 +291,61 @@
                 <button id="demo-button" class="demo-btn"><a href="#" id="demo-link">Get a Demo </a></button>
             </section>
 
+            <!--End of the demo section-->
+
     </main>
 </body> 
 <footer>
+    <!--Footer-->
+
+    <div id="left-footer">
+        <img src="images/Logos/Logo.png" alt="mainn-logo" id="company-logo">
+        <p class="copyright-description">Copyright © 2020 Nexcent ltd.<br>All rights reserved</nbr></p>
+        <div id="social-media">
+            
+        <img src="images/icons/instagram.png" alt="social-media-icons" class="social-media-logos">
+        <img src="images/icons/web.png" alt="social-media-icons" class="social-media-logos">
+        <img src="images/icons/twitter.png" alt="social-media-icons" class="social-media-logos">
+        <img src="images/icons/youtube.png" alt="social-media-icons" class="social-media-logos">
+        </div>
+    </div>
+    <div id="right-footer">
+        <div id="footer-details1">
+            <h1 class="footer-h1">Company</h1>
+            <ul>
+                <li>About us</li>
+                <li>Blog</li>
+                <li>Contact us</li>
+                <li>Pricing</li>
+                <li>Pricing</li>
+                <li>Testimonials</li>
+            </ul>
+        </div>
+        <div id="footer-details2">
+            <h1 class="footer-h1">Support</h1>
+            <ul>
+                <li>Help center</li>
+                <li>Terms of service</li>
+                <li>Legal</li>
+                <li>Privacy Policy</li>
+                <li>Status</li>
+            </ul>
+        </div>
+        <div id="footer-details3">
+            <h1 class="footer-h1">Stay up to date</h1>
+            <div class="label">
+                <label>
+                    <div class="input">
+                        <input type="email" id="email" placeholder="Your email address">
+                    </div>
+                </label>
+                <div class="send">
+                    <img src="images/icons/send.png" alt="send" id="send-button">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--End of the footer section-->
 </footer>    
 </html> 
