updating the files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </section>
             <section id="right">
                 <a href="#"><button id="login-btn" class="button">Login</button></a>
-                <a href="#"><button id="signup-btn" class="button">Sign up</button></a>
+                <a href="#"><button id="signupbtn" class="btn-btn-small-green">Sign up</button></a>
             </section>
         </header>
 
@@ -40,7 +40,7 @@
                 <section id="intro-left">
                     <h1 id="intro-title">Lessons and insights <span>from 8 years</span></h1>
                     <p id="intro-description">Where to grow your business as a photographer: site or a social media?</p>
-                    <button id="register-btn" class="button"><a href="#" class="register-btn">Register</a></button>
+                    <button id="registerbtn" class="btn-btn-medium-green"><a href="#" class="register-btn">Register</a></button>
                 </section>
                 <section id="intro-right">
                     <img src="images/Illustrations/landing-page-illustration.svg" alt="Man-with-a-laptop-illustration-1" id="illustration-1">
@@ -111,7 +111,7 @@
             <section id="app-section-right">
                 <h2 class="title">The unseen of spending three years at Pixelgrade</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
-                <button id="learn-more-btn" class="button"><a href="#" class="register-btn">Learn More</a></button>
+                <button id="learnmorebtn" class="btn-btn-normal-green"><a href="#" class="register-btn">Learn More</a></button>
             </section>
         </section>
 
@@ -167,7 +167,7 @@
                 <section id="app-section-right">
                     <h2 class="title">How to design your site footer like we did</h2>
                     <p class="description">Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
-                    <button id="learn-more-btn" class="button"><a href="#" class="register-btn">Learn More</a></button>
+                    <button id="learnmore-btn" class="btn-btn-normal-green"><a href="#" class="register-btn">Learn More</a></button>
                 </section>
             </section>
 
@@ -288,7 +288,7 @@
 
             <section id="demo">
                 <h1 id="demo-title">Pellentesque suscipit fringilla libero eu.</h1>
-                <button id="demo-button" class="demo-btn"><a href="#" id="demo-link">Get a Demo </a></button>
+                <button id="demobtn" class="btn-btn-normal-green"><a href="#" id="demo-link">Get a Demo </a></button>
             </section>
 
             <!--End of the demo section-->
